<resources>
    <string name="app_name">Adv160818008Midterm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_desc">Recipe Description</string>
    <string name="recipe_detail">Recipe Detail</string>
    <string name="edit_confirm">Confirm</string>
    <string name="create_recipe">Create New Recipe</string>
    <string name="recipe_imgurl">Image Url</string>
    <string name="create_confirm">Confirm</string>
    <string name="list_empty">There is no Recipe, please add recipe first.</string>
    <string name="edit_imgurl">Edit Image Url</string>
</resources>