<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="recipe" type="com.advnmpproj.adv160818008midterm.model.Recipes" />
        <variable name="recipename" type="String" />
        <variable name="desc" type="String" />
        <variable name="detail" type="String" />
        <variable name="imgUrl" type="String" />
        <variable name="createListener" type="com.advnmpproj.adv160818008midterm.view.CreateRecipeClick" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateRecipeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/create_recipe"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/recipe_name"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtCreateRecName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@={recipename}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/recipe_desc"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtCreateRecDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@={desc}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/recipe_detail"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtCreateRecDet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@={detail}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/recipe_imgurl"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout13">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtCreateRecImgUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@={imgUrl}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnCreateRec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/create_confirm"
                    android:onClick="@{(view)->createListener.onCreateRecipeClick(view)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout14" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>